[#12033] Move an old USB implementation to `USBDeprecated` namespace.

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -93,29 +93,29 @@
     <Compile Include="Peripherals\UART\STM32W_UART.cs" />
     <Compile Include="Peripherals\UART\EFM32_UART.cs" />
     <Compile Include="Peripherals\SD\SDHCI.cs" />
-    <Compile Include="Peripherals\USB\PortStatusAndControlRegister.cs" />
-    <Compile Include="Peripherals\USB\USBDescriptor.cs" />
-    <Compile Include="Peripherals\USB\DescriptorType.cs" />
-    <Compile Include="Peripherals\USB\IUSBHub.cs" />
-    <Compile Include="Peripherals\USB\DummyUSBDevice.cs" />
-    <Compile Include="Peripherals\USB\USBRequestException.cs" />
-    <Compile Include="Peripherals\USB\USBEthernetEmulationModelDevice.cs" />
-    <Compile Include="Peripherals\USB\USBCommunicationClass.cs" />
-    <Compile Include="Peripherals\USB\USBEthernetControlModelDevicesSubclass.cs" />
-    <Compile Include="Peripherals\USB\USBEthernetControlModelDevice.cs" />
-    <Compile Include="Peripherals\USB\USBLanguageID.cs" />
-    <Compile Include="Peripherals\USB\USBRequestType.cs" />
-    <Compile Include="Peripherals\USB\SMSC9500.cs" />
-    <Compile Include="Peripherals\USB\USBSetupPacket.cs" />
-    <Compile Include="Peripherals\USB\PortStatusAndControlRegisterChanges.cs" />
+    <Compile Include="Peripherals\USBDeprecated\PortStatusAndControlRegister.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBDescriptor.cs" />
+    <Compile Include="Peripherals\USBDeprecated\DescriptorType.cs" />
+    <Compile Include="Peripherals\USBDeprecated\IUSBHub.cs" />
+    <Compile Include="Peripherals\USBDeprecated\DummyUSBDevice.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBRequestException.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBEthernetEmulationModelDevice.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBCommunicationClass.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBEthernetControlModelDevicesSubclass.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBEthernetControlModelDevice.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBLanguageID.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBRequestType.cs" />
+    <Compile Include="Peripherals\USBDeprecated\SMSC9500.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBSetupPacket.cs" />
+    <Compile Include="Peripherals\USBDeprecated\PortStatusAndControlRegisterChanges.cs" />
     <Compile Include="Peripherals\PCI\VersatilePCI.cs" />
     <Compile Include="Peripherals\SPI\FakeEfmSPITransmitter.cs" />
     <Compile Include="Peripherals\UART\LEUART.cs" />
-    <Compile Include="Peripherals\USB\MassStorage.cs" />
+    <Compile Include="Peripherals\USBDeprecated\MassStorage.cs" />
     <Compile Include="Peripherals\Network\KS8851.cs" />
     <Compile Include="Peripherals\SPI\UARTToSpiConverter.cs" />
-    <Compile Include="Peripherals\USB\IUSBPeripheral.cs" />
-    <Compile Include="Peripherals\USB\SCSI.cs" />
+    <Compile Include="Peripherals\USBDeprecated\IUSBPeripheral.cs" />
+    <Compile Include="Peripherals\USBDeprecated\SCSI.cs" />
     <Compile Include="Peripherals\Video\TegraSyncpts.cs" />
     <Compile Include="Peripherals\Video\VybridDCU.cs" />
     <Compile Include="Peripherals\Video\PL110.cs" />
@@ -125,22 +125,22 @@
     <Compile Include="Peripherals\I2C\VybridI2C.cs" />
     <Compile Include="Peripherals\I2C\OpenCoresI2C.cs" />
     <Compile Include="Peripherals\Wireless\EmberRadio.cs" />
-    <Compile Include="Peripherals\USB\ISP1761.cs" />
+    <Compile Include="Peripherals\USBDeprecated\ISP1761.cs" />
     <Compile Include="Peripherals\Timers\PL031.cs" />
-    <Compile Include="Peripherals\USB\IUSBHubBase.cs" />
-    <Compile Include="Peripherals\USB\USBPacket.cs" />
+    <Compile Include="Peripherals\USBDeprecated\IUSBHubBase.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBPacket.cs" />
     <Compile Include="Peripherals\CAN\STMCAN.cs" />
-    <Compile Include="Peripherals\USB\EHCIHostController.cs" />
+    <Compile Include="Peripherals\USBDeprecated\EHCIHostController.cs" />
     <Compile Include="Peripherals\Timers\TegraUsecTimer.cs" />
     <Compile Include="Peripherals\I2C\TegraI2CController.cs" />
     <Compile Include="Peripherals\I2C\TegraDVC.cs" />
     <Compile Include="Peripherals\I2C\LM95245.cs" />
     <Compile Include="Peripherals\Input\FT5x06.cs" />
     <Compile Include="Peripherals\IRQControllers\AIC.cs" />
-    <Compile Include="Peripherals\USB\MassStorageExtensions.cs" />
+    <Compile Include="Peripherals\USBDeprecated\MassStorageExtensions.cs" />
     <Compile Include="Peripherals\Input\PL050.cs" />
-    <Compile Include="Peripherals\USB\USBMouse.cs" />
-    <Compile Include="Peripherals\USB\USBKeyboard.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBMouse.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBKeyboard.cs" />
     <Compile Include="Peripherals\I2C\EFM32GGI2CController.cs" />
     <Compile Include="Peripherals\I2C\BMP180.cs" />
     <Compile Include="Peripherals\I2C\BMA180.cs" />
@@ -159,18 +159,18 @@
     <Compile Include="Peripherals\Miscellaneous\PrimeCellIDHelper.cs" />
     <Compile Include="Peripherals\SPI\STM32SPI.cs" />
     <Compile Include="Peripherals\Timers\CC2538Watchdog.cs" />
-    <Compile Include="Peripherals\USB\USBDeviceSpeed.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBDeviceSpeed.cs" />
     <Compile Include="Peripherals\GPIOPort\EFMGPIOPort.cs" />
     <Compile Include="Peripherals\GPIOPort\STM32F4GPIOPort.cs" />
     <Compile Include="Peripherals\GPIOPort\STM32F1GPIOPort.cs" />
     <Compile Include="Peripherals\GPIOPort\VybridGPIOPort.cs" />
     <Compile Include="Peripherals\GPIOPort\XilinxGPIOPS.cs" />
-    <Compile Include="Peripherals\USB\USBTablet.cs" />
+    <Compile Include="Peripherals\USBDeprecated\USBTablet.cs" />
     <Compile Include="Peripherals\GPIOPort\Emios.cs" />
     <Compile Include="Peripherals\IRQControllers\MPC5567_INTC.cs" />
     <Compile Include="Peripherals\UART\MPC5567_UART.cs" />
     <Compile Include="Peripherals\Timers\CC2538SleepTimer.cs" />
-    <Compile Include="Peripherals\USB\Ulpi.cs" />
+    <Compile Include="Peripherals\USBDeprecated\Ulpi.cs" />
     <Compile Include="Peripherals\SD\SunxiMMC.cs" />
     <Compile Include="Peripherals\Timers\SunxiHighSpeedTimer.cs" />
     <Compile Include="Peripherals\SD\MMCController.cs" />
@@ -184,7 +184,7 @@
     <Compile Include="Peripherals\Miscellaneous\BitBanding.cs">
       <DependentUpon>BitBanding.tt</DependentUpon>
     </Compile>
-    <Compile Include="Peripherals\USB\UsbHub.cs" />
+    <Compile Include="Peripherals\USBDeprecated\UsbHub.cs" />
     <Compile Include="Peripherals\UART\CadenceUart.cs" />
     <Compile Include="Peripherals\UART\Atmel91DebugUnit.cs" />
     <Compile Include="Peripherals\UART\ImxUart.cs" />
