[#12033] Add a new USB 2.0 framework.

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -88,6 +88,36 @@
     <Compile Include="Utilities\Packets\PacketFieldAttribute.cs" />
     <Compile Include="Utilities\Packets\LeastSignificantByteFirst.cs" />
     <Compile Include="Utilities\Packets\DynamicPropertiesObject.cs" />
+    <Compile Include="Peripherals\USB\MSC\BOT\CommandStatusWrapper.cs" />
+    <Compile Include="Peripherals\USB\MSC\BulkOnlyTransportCommandBlockWrapper.cs" />
+    <Compile Include="Peripherals\USB\MSC\BOT\CommandStatus.cs" />
+    <Compile Include="Peripherals\USB\MSC\Protocol.cs" />
+    <Compile Include="Peripherals\USB\MSC\Subclass.cs" />
+    <Compile Include="Peripherals\USB\MSC\Interface.cs" />
+    <Compile Include="Peripherals\USB\HID\Descriptor.cs" />
+    <Compile Include="Peripherals\USB\HID\DescriptorType.cs" />
+    <Compile Include="Peripherals\USB\HID\ReportDescriptor.cs" />
+    <Compile Include="Peripherals\USB\HID\Interface.cs" />
+    <Compile Include="Peripherals\USB\HID\Protocol.cs" />
+    <Compile Include="Peripherals\USB\HID\SubclassCode.cs" />
+    <Compile Include="Peripherals\USB\SetupPacket.cs" />
+    <Compile Include="Peripherals\USB\PacketRecipient.cs" />
+    <Compile Include="Peripherals\USB\StandardRequest.cs" />
+    <Compile Include="Peripherals\USB\Direction.cs" />
+    <Compile Include="Peripherals\USB\DescriptorProvider.cs" />
+    <Compile Include="Peripherals\USB\IProvidesDescriptor.cs" />
+    <Compile Include="Peripherals\USB\USBDeviceInfo.cs" />
+    <Compile Include="Peripherals\USB\DescriptorType.cs" />
+    <Compile Include="Peripherals\USB\EndpointTransferType.cs" />
+    <Compile Include="Peripherals\USB\USBEndpoint.cs" />
+    <Compile Include="Peripherals\USB\USBInterface.cs" />
+    <Compile Include="Peripherals\USB\USBConfiguration.cs" />
+    <Compile Include="Peripherals\USB\PacketType.cs" />
+    <Compile Include="Peripherals\USB\IUSBDevice.cs" />
+    <Compile Include="Peripherals\USB\PacketSize.cs" />
+    <Compile Include="Peripherals\USB\USBClassCode.cs" />
+    <Compile Include="Peripherals\USB\USBProtocol.cs" />
+    <Compile Include="Peripherals\USB\USBString.cs" />
     <Compile Include="Peripherals\BasicBytePeripheral.cs" />
     <Compile Include="Peripherals\BasicWordPeripheral.cs" />
     <Compile Include="Peripherals\BasicDoubleWordPeripheral.cs" />
