--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -43,6 +43,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Peripherals\USB\PSE_USB.cs" />
     <Compile Include="Peripherals\Timers\PSE_RTC.cs" />
     <Compile Include="Peripherals\SD\PSE_SDController.cs" />
     <Compile Include="Peripherals\SPI\PSE_QSPI.cs" />
