--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Peripherals\SPI\PSE_SPI.cs" />
     <Compile Include="Peripherals\Timers\PSE_Timer.cs" />
     <Compile Include="Peripherals\I2C\PSE_I2C.cs" />
+    <Compile Include="Peripherals\USB\USBMouse.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
