[#12033] Add pendrive model compatible with the new USB 2.0 framework.

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Peripherals\USB\PSE_USB.cs" />
+    <Compile Include="Peripherals\USB\USBPendrive.cs" />
     <Compile Include="Peripherals\Timers\PSE_RTC.cs" />
     <Compile Include="Peripherals\SD\PSE_SDController.cs" />
     <Compile Include="Peripherals\SPI\PSE_QSPI.cs" />
