[#11882] Add CAN message frame.

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -461,6 +461,7 @@
     <Compile Include="Testing\PWMTester.cs" />
     <Compile Include="Storage\DataStorage.cs" />
     <Compile Include="Core\GPIOGate.cs" />
+    <Compile Include="Peripherals\CAN\CANMessageFrame.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
