[#12123] Add CC2538 Flash Controller.

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Peripherals\UART\AxiUartLite.cs" />
     <Compile Include="Peripherals\Input\AntMouse.cs" />
     <Compile Include="Peripherals\MTD\CFIFlashExtensions.cs" />
+    <Compile Include="Peripherals\MTD\CC2538FlashController.cs" />
     <Compile Include="Peripherals\Input\PS2Keyboard.cs" />
     <Compile Include="Peripherals\Input\PS2Mouse.cs" />
     <Compile Include="Peripherals\MTD\ISPIFlash.cs" />
