[#12197] Rename `USBDeviceInfo` to `USBDeviceCore`.

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -110,7 +110,7 @@
     <Compile Include="Peripherals\USB\Direction.cs" />
     <Compile Include="Peripherals\USB\DescriptorProvider.cs" />
     <Compile Include="Peripherals\USB\IProvidesDescriptor.cs" />
-    <Compile Include="Peripherals\USB\USBDeviceInfo.cs" />
+    <Compile Include="Peripherals\USB\USBDeviceCore.cs" />
     <Compile Include="Peripherals\USB\DescriptorType.cs" />
     <Compile Include="Peripherals\USB\EndpointTransferType.cs" />
     <Compile Include="Peripherals\USB\USBEndpoint.cs" />
