--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -269,6 +269,7 @@
     <Compile Include="Peripherals\Timers\PSE_Timer.cs" />
     <Compile Include="Peripherals\I2C\PSE_I2C.cs" />
     <Compile Include="Peripherals\USB\USBMouse.cs" />
+    <Compile Include="Peripherals\Miscellaneous\STM32F4_RNG.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
