--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -67,19 +67,19 @@
     <Compile Include="ConsoleBackendAnalyzers/WindowPositionProvider.cs" />
     <Compile Include="ConsoleBackendAnalyzers/ProcessBasedProvider.cs" />
   </ItemGroup>
-  <ItemGroup Condition=" $(CurrentPlatform) != 'Windows'">
-    <Compile Include="VideoAnalyzer/FrameBufferDisplayWidget.cs" />
-    <Compile Include="VideoAnalyzer/DisplayMode.cs" />
-    <Compile Include="VideoAnalyzer/BitmapImageExtensions.cs" />
-    <Compile Include="VideoAnalyzer/Handlers\AbsolutePointerHandler.cs" />
-    <Compile Include="VideoAnalyzer/Handlers\IOHandler.cs" />
-    <Compile Include="VideoAnalyzer/Handlers\RelativePointerHandler.cs" />
-    <Compile Include="VideoAnalyzer/Handlers\PointerHandler.cs" />
-    <Compile Include="VideoAnalyzer/Events\X11EventSource.cs" />
-    <Compile Include="VideoAnalyzer/Events\XWTEventSource.cs" />
-    <Compile Include="VideoAnalyzer/Events\IEventSource.cs" />
-    <Compile Include="VideoAnalyzer/Events\X11ToKeyScanCodeConverter.cs" />
-    <Compile Include="VideoAnalyzer/VideoAnalyzer.cs" />
+  <ItemGroup>
+    <Compile Include="VideoAnalyzer\FrameBufferDisplayWidget.cs" />
+    <Compile Include="VideoAnalyzer\DisplayMode.cs" />
+    <Compile Include="VideoAnalyzer\BitmapImageExtensions.cs" />
+    <Compile Include="VideoAnalyzer\Handlers\AbsolutePointerHandler.cs" />
+    <Compile Include="VideoAnalyzer\Handlers\IOHandler.cs" />
+    <Compile Include="VideoAnalyzer\Handlers\RelativePointerHandler.cs" />
+    <Compile Include="VideoAnalyzer\Handlers\PointerHandler.cs" />
+    <Compile Include="VideoAnalyzer\Events\X11EventSource.cs" />
+    <Compile Include="VideoAnalyzer\Events\XWTEventSource.cs" />
+    <Compile Include="VideoAnalyzer\Events\IEventSource.cs" />
+    <Compile Include="VideoAnalyzer\Events\X11ToKeyScanCodeConverter.cs" />
+    <Compile Include="VideoAnalyzer\VideoAnalyzer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildProjectDirectory)\BuildAdditionalProjects-UI.csproj.targets" Condition="Exists('$(MSBuildProjectDirectory)\BuildAdditionalProjects-UI.csproj.targets')" />
