[#12837] Add lib references for Windows.

--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -35,6 +35,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationFramework" Condition=" $(CurrentPlatform) == 'Windows'" />
+    <Reference Include="PresentationCore" Condition=" $(CurrentPlatform) == 'Windows'" />
+    <Reference Include="WindowsBase" Condition=" $(CurrentPlatform) == 'Windows'" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
