--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -273,6 +273,9 @@
     <Compile Include="Peripherals\I2C\PSE_I2C.cs" />
     <Compile Include="Peripherals\USB\USBMouse.cs" />
     <Compile Include="Peripherals\Miscellaneous\STM32F4_RNG.cs" />
+    <Compile Include="Peripherals\UART\Murax_UART.cs" />
+    <Compile Include="Peripherals\Timers\Murax_Timer.cs" />
+    <Compile Include="Peripherals\GPIOPort\Murax_GPIO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
