--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -276,6 +276,7 @@
     <Compile Include="Peripherals\UART\Murax_UART.cs" />
     <Compile Include="Peripherals\Timers\Murax_Timer.cs" />
     <Compile Include="Peripherals\GPIOPort\Murax_GPIO.cs" />
+    <Compile Include="Peripherals\Miscellaneous\SAM_TRNG.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
