[#13591] Added tests for PseudorandomNumberGenerator.

--- a/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
+++ b/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Mocks\MockPeripheralWithBoolAttribute.cs" />
     <Compile Include="Mocks\MockPeripheralUsingReferenceAttribute.cs" />
     <Compile Include="Utilities\ThreadSyncTester.cs" />
+    <Compile Include="PseudorandomNumberGeneratorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
