--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Peripherals\IRQControllers\EXTI.cs" />
     <Compile Include="Peripherals\DMA\STM32DMA.cs" />
     <Compile Include="Peripherals\DMA\UDMA.cs" />
+    <Compile Include="Peripherals\DMA\PSE_PDMA.cs" />
     <Compile Include="Peripherals\DMA\STM32LDMA.cs" />
     <Compile Include="Peripherals\Miscellaneous\ArmSysCtl.cs" />
     <Compile Include="Peripherals\DMA\OmapDma.cs" />
