[#12063] Add SimpleCache tests.

--- a/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
+++ b/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Utilities\ThreadSyncTester.cs" />
     <Compile Include="PseudorandomNumberGeneratorTests.cs" />
     <Compile Include="AdHocCompilerTests.cs" />
+    <Compile Include="SimpleCacheTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
