--- a/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
+++ b/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Utilities\ThreadSyncTester.cs" />
     <Compile Include="PseudorandomNumberGeneratorTests.cs" />
     <Compile Include="AdHocCompilerTests.cs" />
+    <Compile Include="TypeExtensionsCacheTests.cs" />
     <Compile Include="SimpleCacheTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +126,10 @@
     <ProjectReference Include="..\..\..\Peripherals\Peripherals.csproj">
       <Project>{66400796-0C5B-4386-A859-50A2AC3F3DB7}</Project>
       <Name>Peripherals</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Extensions\Extensions.csproj">
+      <Project>{4C636FAF-4650-4088-8EA8-2FCCC225E9CF}</Project>
+      <Name>Extensions</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
