--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -43,6 +43,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Peripherals\Timers\EFR32_RTCC.cs" />
     <Compile Include="Peripherals\Timers\LiteX_CPUTimer.cs" />
     <Compile Include="Peripherals\Timers\LiteX_Timer.cs" />
     <Compile Include="Peripherals\USB\PSE_USB.cs" />
