[#14413] Add EtherBone bridge peripheral.

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -282,6 +282,7 @@
     <Compile Include="Peripherals\Miscellaneous\SAM_TRNG.cs" />
     <Compile Include="Peripherals\UART\LowPower_UART.cs" />
     <Compile Include="Peripherals\Timers\LowPower_Timer.cs" />
+    <Compile Include="Peripherals\EtherBoneBridge.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
