[#14631] Add LiteX Control and Status model.

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -284,6 +284,7 @@
     <Compile Include="Peripherals\Timers\LowPower_Timer.cs" />
     <Compile Include="Peripherals\EtherBoneBridge.cs" />
     <Compile Include="Peripherals\SPI\LiteX_SPI.cs" />
+    <Compile Include="Peripherals\GPIOPort\LiteX_ControlAndStatus.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
