[#14697] Add PicoRV SPI controller

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -293,6 +293,7 @@
     <Compile Include="Peripherals\MTD\EFR32xg13FlashController.cs" />
     <Compile Include="Peripherals\USB\ValentyUSB.cs" />
     <Compile Include="Peripherals\I2C\LiteX_I2C.cs" />
+    <Compile Include="Peripherals\SPI\PicoRV_SPI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
