[#13752] Add GDB command returning ID of current thread.

--- a/src/Emulator/Extensions/Extensions.csproj
+++ b/src/Emulator/Extensions/Extensions.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Utilities\GDB\Commands\QueryCommand.cs" />
     <Compile Include="Hooks\PacketInterceptionPythonEngine.cs" />
     <Compile Include="Hooks\PacketInterceptionExtensions.cs" />
+    <Compile Include="Utilities\GDB\Commands\CurrentThreadCommand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
