[#13752] Add GDB command for managing multi-thread continuation.

--- a/src/Emulator/Extensions/Extensions.csproj
+++ b/src/Emulator/Extensions/Extensions.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Hooks\PacketInterceptionPythonEngine.cs" />
     <Compile Include="Hooks\PacketInterceptionExtensions.cs" />
     <Compile Include="Utilities\GDB\Commands\CurrentThreadCommand.cs" />
+    <Compile Include="Utilities\GDB\Commands\MultithreadContinueCommand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
