--- a/src/Emulator/Extensions/Extensions.csproj
+++ b/src/Emulator/Extensions/Extensions.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Utilities\GDB\Commands\CurrentThreadCommand.cs" />
     <Compile Include="Utilities\GDB\Commands\MultithreadContinueCommand.cs" />
     <Compile Include="Utilities\GDB\Commands\ThreadAliveCommand.cs" />
+    <Compile Include="Utilities\GDB\Commands\ThreadAttachedCommand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
