[#13465] Add UART file backend
This introduces mechanism for storing
UART output to file. It does not conflict
with UART analyzers.

Co-authored-by: Mateusz Holenko <mholenko@antmicro.com>

--- a/src/Emulator/Extensions/Extensions.csproj
+++ b/src/Emulator/Extensions/Extensions.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Utilities\USB\ConfigurationDescriptor.cs" />
     <Compile Include="Utilities\USB\DeviceDescriptor.cs" />
     <Compile Include="Utilities\USB\InterfaceDescriptor.cs" />
+    <Compile Include="Utilities\UartFileBackend.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
