--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -292,6 +292,7 @@
     <Compile Include="Peripherals\SD\SDCapacity.cs" />
     <Compile Include="Peripherals\MTD\EFR32xg13FlashController.cs" />
     <Compile Include="Peripherals\USB\ValentyUSB.cs" />
+    <Compile Include="Peripherals\I2C\LiteX_I2C.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
