--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -82,6 +82,7 @@
     <Compile Include="VideoAnalyzer\Events\IEventSource.cs" />
     <Compile Include="VideoAnalyzer\Events\X11ToKeyScanCodeConverter.cs" />
     <Compile Include="VideoAnalyzer\VideoAnalyzer.cs" />
+    <Compile Include="VideoAnalyzer\DummyVideoAnalyzer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildProjectDirectory)\BuildAdditionalProjects-UI.csproj.targets" Condition="Exists('$(MSBuildProjectDirectory)\BuildAdditionalProjects-UI.csproj.targets')" />
