[#14972] Add flash controller model for EFR32

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -290,6 +290,7 @@
     <Compile Include="Peripherals\GPIOPort\LiteX_GPIO.cs" />
     <Compile Include="Peripherals\SPI\LiteX_SPI.cs" />
     <Compile Include="Peripherals\SD\SDCapacity.cs" />
+    <Compile Include="Peripherals\MTD\EFR32xg13FlashController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
