--- a/src/Emulator/Cores/linux-properties.csproj
+++ b/src/Emulator/Cores/linux-properties.csproj
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
 <PropertyGroup>
+  <CompilerPath>/usr/bin/gcc</CompilerPath>
+  <LinkerPath>/usr/bin/gcc</LinkerPath>
   <CurrentPlatform>Linux</CurrentPlatform>
   <DefineConstants>$(DefineConstants);PLATFORM_LINUX</DefineConstants>
 </PropertyGroup>
