--- a/src/Emulator/Cores/osx-properties.csproj
+++ b/src/Emulator/Cores/osx-properties.csproj
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
 <PropertyGroup>
-  <CompilerPath>/usr/local/bin/gcc-4.9</CompilerPath>
-  <LinkerPath>/usr/local/bin/gcc-4.9</LinkerPath>
+  <CompilerPath>/usr/bin/clang</CompilerPath>
+  <LinkerPath>/usr/bin/clang</LinkerPath>
   <CurrentPlatform>OSX</CurrentPlatform>
   <DefineConstants>$(DefineConstants);PLATFORM_OSX</DefineConstants>
 </PropertyGroup>
