--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -464,6 +464,8 @@
     <Compile Include="Storage\DataStorage.cs" />
     <Compile Include="Core\GPIOGate.cs" />
     <Compile Include="Peripherals\CAN\CANMessageFrame.cs" />
+    <Compile Include="Utilities\CRCEngine.cs" />
+    <Compile Include="Utilities\CRCType.cs" />
     <Compile Include="Utilities\Collections\SimpleCache.cs" />
     <Compile Include="Utilities\BitBangHelper.cs" />
     <Compile Include="Utilities\GDB\ArgumentAttribute.cs" />
