--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Peripherals\I2C\LiteX_I2C.cs" />
     <Compile Include="Peripherals\SPI\PicoRV_SPI.cs" />
     <Compile Include="Peripherals\Video\LiteX_Framebuffer.cs" />
+    <Compile Include="Peripherals\USB\USBKeyboard.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
