--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -301,6 +301,7 @@
     <Compile Include="Peripherals\Video\LiteX_Framebuffer.cs" />
     <Compile Include="Peripherals\USB\USBKeyboard.cs" />
     <Compile Include="Peripherals\Wireless\IEEE802_15_4\PHYHeader802154.cs" />
+    <Compile Include="Peripherals\SPI\MAX3421E.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
