--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -264,6 +264,7 @@
     <Compile Include="Peripherals\Miscellaneous\Quark_SystemControlSubsystem.cs" />
     <Compile Include="Peripherals\UART\SiFive_UART.cs" />
     <Compile Include="Peripherals\UART\SAM_USART.cs" />
+    <Compile Include="Peripherals\UART\Potato_UART.cs" />
     <Compile Include="Peripherals\GPIOPort\SiFive_GPIO.cs" />
     <Compile Include="Peripherals\Miscellaneous\SiLabs\EFM32xG1xBDeviceInformation.cs" />
     <Compile Include="Peripherals\Miscellaneous\SiLabs\EFM32xGDeviceInformation.cs" />
